--- a/CameraService/CameraSharerer/Properties/AndroidManifest.xml
+++ b/CameraService/CameraSharerer/Properties/AndroidManifest.xml
@@ -9,7 +9,7 @@
 	<application android:allowBackup="true" android:icon="@mipmap/ic_launcher" android:label="@string/app_name" android:roundIcon="@mipmap/ic_launcher_round" android:supportsRtl="true" android:theme="@style/AppTheme">
     <provider
             android:name="android.support.v4.content.FileProvider"
-            android:authorities="test.fileprovider"
+            android:authorities="com.camerasharer.fileprovider"
             android:exported="false"
             android:grantUriPermissions="true">
             <meta-data
@@ -18,4 +18,4 @@
         </provider>
 
   </application>
-</manifest>
+</manifest> 
